message(STATUS "UNIT-TEST available")

file(GLOB_RECURSE ${PROJECT_NAME}_TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE ${PROJECT_NAME}_MAIN_SRC ${CMAKE_SOURCE_DIR}/src/main/*.cpp)
#list(FILTER ALL_MAIN_SRC EXCLUDE REGEX "${CMAKE_SOURCE_DIR}/src/main/main.cpp" )
#list(FILTER ALL_MAIN_SRC EXCLUDE REGEX "${CMAKE_SOURCE_DIR}/src/main/lib.cpp" )

add_executable(Test${PROJECT_NAME} ${${PROJECT_NAME}_TEST_SRC} ${${PROJECT_NAME}_MAIN_SRC})
target_include_directories(Test${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../main/)
